Fix word wrap

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
 	background: #23241f;
+	word-wrap: break-word;
 }
 
 a {
